# portfolio-optimization

./: .gitignore  clear_model_latest.sh  config.py  dataloaders.py  dataset.py  eda.ipynb  lstm_on_adjusted_mag7.ipynb  main.ipynb  models.py  mpt.py  pyproject.toml  test.py  train.py
20250617-0221/: info.json  weights.pth
classic/: mpt.py
classic-methods/: mpt.py
classicmethods/: mpt.py
data/: dataset.py  download_yfinance.py  ohlcv_adjusted_mag7_data.py  preprocessing.py
data-csv/: ohlc_adjusted_mag7_raw.csv  ohlcv_adjusted_mag7.csv
ml/: dataset.py  models.py
saved/model_latest/: cumulative_returns_markowitz.npy  info.json  info_fc.json  info_lstm.json  markowitz_returns.npy  weights.pth  weights_fc.pth  weights_lstm.pth
saved/model_latest/fc/: info.json  weights.pth  weights_epoch_100.pth  weights_epoch_120.pth  weights_epoch_140.pth  weights_epoch_160.pth  weights_epoch_180.pth  weights_epoch_20.pth  weights_epoch_200.pth  weights_epoch_40.pth  weights_epoch_60.pth  weights_epoch_80.pth
saved/model_latest/lstm/: info.json  weights.pth  weights_epoch_100.pth  weights_epoch_120.pth  weights_epoch_140.pth  weights_epoch_160.pth  weights_epoch_180.pth  weights_epoch_20.pth  weights_epoch_200.pth  weights_epoch_40.pth  weights_epoch_60.pth  weights_epoch_80.pth
