[project]
name = "portfolio-optimization"
version = "0.1.0"
description = "A project for optimizing investment portfolios by applying deep learning techniques to historical financial data."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "yfinance>=0.2.63",
]

[project.optional-dependencies]
jupyter = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "jupyterlab>=4.4.3",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-lsp>=5.1.1",
    "python-lsp-server>=1.12.2",
    "theme-darcula>=4.0.0"
]
